# esp-synth

./: Cargo.toml  README.md
.cargo/: config.toml
src/: discrete_functions.rs  envelope.rs  filters.rs  i2s.rs  input.rs  lib.rs  midi.rs  oscillators.rs  synth.rs
src/filters/: pass.rs  traits.rs  volume.rs
src/midi/: send.rs  sequencer.rs  usb.rs
src/oscillators/: oscillators.rs  phaser.rs  scales.rs  traits.rs
